--- a/index.html
+++ b/index.html
@@ -397,4 +397,4 @@
                             <td class="px-4 md:px-6 py-4 text-sm text-gray-900">Yudistira</td>
                             <td class="px-4 md:px-6 py-4 text-sm text-gray-500">Sapi 1</td>
                             <td class="px-4 md:px-6 py-4 text-sm text-gray-500">Rp 0</td>
-                            <td class="px-4 md:px-6 py-4"><span class="px-3 py-1 text-xs bg-red-100 text-red-800 rounded-full">⏳ Belum
+                            <td class="px-4 md:px-6 py-4"><span class="px-3 py-1 text-xs bg-red-100 text-red-800 rounded-full">⏳ Proses
