--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                         </div>
                         <div>
                             <h3 class="text-lg font-bold text-gray-800">Qurban Sapi 2</h3>
-                            <p class="text-sm text-gray-600">7 Peserta</p>
+                            <p class="text-sm text-gray-600">Saldo 7 Peserta</p>
                         </div>
                     </div>
                     <div class="text-right">
