--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <span class="text-4xl">🐄</span>
                 </div>
                 <h1 class="text-4xl md:text-5xl font-bold mb-4 bg-gradient-to-r from-yellow-200 to-yellow-400 bg-clip-text text-transparent">
-                    Program Qurban 2025-2028
+                    Program Qurban Bosqu 2025-2028
                 </h1>
                 <p class="text-xl opacity-90 mb-6">Target 2 Sapi • Iuran Rp 100.000/bulan • 36 Bulan</p>
                 <div class="flex items-center justify-center space-x-6 text-sm">
@@ -130,7 +130,7 @@
                     </div>
                     <div class="ml-3 md:ml-4">
                         <p class="text-xs md:text-sm text-gray-600">Terkumpul</p>
-                        <p class="text-sm md:text-xl font-bold text-gray-800">Rp 1.900.000</p>
+                        <p class="text-sm md:text-xl font-bold text-gray-800">Rp 2.200.000</p>
                     </div>
                 </div>
             </div>
