--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                     </div>
                     <div class="flex justify-between items-center py-2 px-3 bg-orange-50 rounded-lg">
                         <span class="text-sm font-medium">10. Alfan</span>
-                        <span class="text-sm text-gray-500">- Rp 100.000</span>
+                        <span class="text-sm text-orange-600">✓ Rp 100.000</span>
                     </div>
                     <div class="flex justify-between items-center py-2 px-3 bg-orange-50 rounded-lg">
                         <span class="text-sm font-medium">11. Martin</span>
