--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <span class="text-4xl">🐄</span>
                 </div>
                 <h1 class="text-4xl md:text-5xl font-bold mb-4 bg-gradient-to-r from-yellow-200 to-yellow-400 bg-clip-text text-transparent">
-                    Program Qurban Bosqu 2025-2028
+                    Qurban Bosqu 2025-2028
                 </h1>
                 <p class="text-xl opacity-90 mb-6">Target 2 Sapi • Iuran Rp 100.000/bulan • 36 Bulan</p>
                 <div class="flex items-center justify-center space-x-6 text-sm">
