--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                 </div>
             </div>
             
-            <div class="overflow-x-auto">
+            <!--<div class="overflow-x-auto">
                 <table class="w-full">
                     <thead class="bg-gradient-to-r from-gray-50 to-gray-100">
                         <tr>
