--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
         </div>
 
         <!-- Participants Table -->
-        <div class="glass-effect rounded-2xl shadow-lg overflow-hidden fade-in mb-8">
+       <!-- <div class="glass-effect rounded-2xl shadow-lg overflow-hidden fade-in mb-8">
             <div class="px-6 py-4 border-b border-gray-200 bg-gradient-to-r from-indigo-50 to-purple-50">
                 <div class="flex flex-col md:flex-row md:items-center justify-between">
                     <h3 class="text-lg md:text-xl font-bold text-gray-800 flex items-center mb-2 md:mb-0">
@@ -353,7 +353,7 @@
                 </div>
             </div>
             
-            <!--<div class="overflow-x-auto">
+            <div class="overflow-x-auto">
                 <table class="w-full">
                     <thead class="bg-gradient-to-r from-gray-50 to-gray-100">
                         <tr>
