--- a/index.html
+++ b/index.html
@@ -398,4 +398,23 @@
                             <td class="px-4 md:px-6 py-4 text-sm text-gray-900">Yudistira</td>
                             <td class="px-4 md:px-6 py-4 text-sm text-gray-500">Sapi 1</td>
                             <td class="px-4 md:px-6 py-4 text-sm text-gray-500">Rp 0</td>
-                            <td class="px-4 md:px-6 py-4"><span class="px-3 py-1 text-xs bg-red-100 text-red-800 rounded-full">⏳ Proses
+                            <td class="px-4 md:px-6 py-4"><span class="px-3 py-1 text-xs bg-red-100 text-red-800 rounded-full">⏳ Proses-->
+        <!-- Footer -->
+<footer class="bg-white border-t mt-12">
+  <div class="container mx-auto px-4 py-6 flex flex-col md:flex-row justify-between items-center text-sm text-gray-600">
+    <div class="mb-2 md:mb-0 text-center md:text-left">
+      © 2025 <span class="font-semibold text-gray-800">Qurban Bosqu</span>. Semua Hak Dilindungi.
+    </div>
+    <div class="flex items-center space-x-4">
+      <a href="https://wa.me/6281234567890" target="_blank" class="hover:text-green-600 transition">
+        <i class="fab fa-whatsapp"></i> WhatsApp
+      </a>
+      <a href="mailto:qurbanbosqu@example.com" class="hover:text-blue-600 transition">
+        <i class="fas fa-envelope"></i> Email
+      </a>
+      <a href="#" class="hover:text-purple-600 transition">
+        <i class="fas fa-mosque"></i> Tentang Program
+      </a>
+    </div>
+  </div>
+</footer>
