--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
     <div class="mb-2 md:mb-0 text-center md:text-left">
       © 2025 <span class="font-semibold text-gray-800">Qurban Bosqu</span>. Semua Hak Dilindungi.
     </div>
-    <div class="flex items-center space-x-4">
+   <!-- <div class="flex items-center space-x-4">
       <a href="https://wa.me/6281234567890" target="_blank" class="hover:text-green-600 transition">
         <i class="fab fa-whatsapp"></i> WhatsApp
       </a>
@@ -415,6 +415,6 @@
       <a href="#" class="hover:text-purple-600 transition">
         <i class="fas fa-mosque"></i> Tentang Program
       </a>
-    </div>
+    </div>-->
   </div>
 </footer>
