--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     </div>
                     <div class="flex justify-between items-center py-2 px-3 bg-green-50 rounded-lg">
                         <span class="text-sm font-medium">5. Yudistira</span>
-                        <span class="text-sm text-gray-500">- Rp 0</span>
+                        <span class="text-sm text-gray-500">⏳ Proses</span>
                     </div>
                     <div class="flex justify-between items-center py-2 px-3 bg-green-50 rounded-lg">
                         <span class="text-sm font-medium">6. Riza S</span>
@@ -264,7 +264,7 @@
                     </div>
                     <div class="flex justify-between items-center py-2 px-3 bg-orange-50 rounded-lg">
                         <span class="text-sm font-medium">11. Martin</span>
-                        <span class="text-sm text-gray-500">- Rp 0</span>
+                        <span class="text-sm text-gray-500">⏳ Proses</span>
                     </div>
                     <div class="flex justify-between items-center py-2 px-3 bg-orange-50 rounded-lg">
                         <span class="text-sm font-medium">12. Rachmad</span>
