--- a/index.html
+++ b/index.html
@@ -418,3 +418,43 @@
     </div>-->
   </div>
 </footer>
+        <!-- Footer Responsif & Rapi -->
+<footer class="bg-gradient-to-br from-blue-900 via-indigo-800 to-purple-900 text-white pt-10 pb-6 mt-12">
+  <div class="container mx-auto px-6">
+    <!-- Baris Utama -->
+    <div class="flex flex-col md:flex-row md:justify-between items-center md:items-start space-y-6 md:space-y-0">
+      <!-- Kolom Kiri -->
+      <div class="text-center md:text-left">
+        <h2 class="text-xl font-bold tracking-wide">Qurban Bosqu 2025 🐄</h2>
+        <p class="text-sm text-indigo-200 mt-1">Bersama kita wujudkan 2 Sapi Qurban • 36 Bulan Iuran</p>
+        <div class="mt-3 text-sm opacity-70">
+          <p>🌙 Program Berkah • 🕌 Nilai Ibadah • 💰 Transparansi</p>
+        </div>
+      </div>
+
+      <!-- Kolom Tengah -->
+      <div class="text-center">
+        <h3 class="text-sm font-semibold mb-2 tracking-wide">Kontak Kami</h3>
+        <div class="space-y-1 text-sm text-indigo-200">
+          <p><i class="fab fa-whatsapp mr-2"></i><a href="https://wa.me/6281234567890" target="_blank" class="hover:text-green-300 transition">+62 812-3456-7890</a></p>
+          <p><i class="fas fa-envelope mr-2"></i><a href="mailto:qurbanbosqu@example.com" class="hover:text-yellow-300 transition">qurbanbosqu@example.com</a></p>
+        </div>
+      </div>
+
+      <!-- Kolom Kanan -->
+      <div class="text-center md:text-right">
+        <h3 class="text-sm font-semibold mb-2 tracking-wide">Menu Cepat</h3>
+        <div class="space-y-1 text-sm text-indigo-200">
+          <a href="#" class="block hover:text-purple-300 transition">Tentang Program</a>
+          <a href="#" class="block hover:text-purple-300 transition">Riwayat Iuran</a>
+          <a href="#" class="block hover:text-purple-300 transition">FAQ</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Garis & Copyright -->
+    <div class="mt-8 border-t border-indigo-700 pt-4 text-center text-xs text-indigo-300">
+      &copy; 2025 Qurban Bosqu. Semua hak dilindungi. Dibuat dengan semangat 🐄 dan keikhlasan.
+    </div>
+  </div>
+</footer>
