--- a/index.html
+++ b/index.html
@@ -419,25 +419,27 @@
   </div>
 </footer>
         
-        <!-- Footer Full Width - Elegan Qurban -->
+        
+<!-- Footer Full Width Sesungguhnya -->
 <footer class="w-full bg-gradient-to-br from-blue-900 via-indigo-800 to-purple-900 text-white mt-12 pt-10 pb-6">
-  <div class="max-w-7xl mx-auto px-6">
+  <!-- Row Container Full Width -->
+  <div class="w-full px-6 md:px-16">
     <!-- Konten Baris -->
-    <div class="flex flex-col md:flex-row justify-between items-start space-y-6 md:space-y-0">
+    <div class="flex flex-col lg:flex-row justify-between items-start space-y-8 lg:space-y-0">
       <!-- Kolom Logo & Info -->
-      <div class="w-full md:w-1/3">
+      <div class="lg:w-1/3 w-full">
         <h2 class="text-2xl font-bold tracking-wide mb-2">🐄 Qurban Bosqu 2025</h2>
         <p class="text-sm text-indigo-200 leading-relaxed">
-          Bersama kita wujudkan 2 ekor sapi qurban melalui iuran ringan bulanan selama 36 bulan. Program penuh berkah, transparan, dan bermanfaat.
+          Bersama kita wujudkan 2 ekor sapi qurban melalui iuran ringan selama 36 bulan. Program penuh keberkahan dan transparansi.
         </p>
         <div class="mt-3 text-sm text-indigo-300">
-          🕌 Ibadah • 💰 Amanah • 🤝 Bersama
+          🕌 Ibadah • 💰 Amanah • 🤝 Gotong Royong
         </div>
       </div>
 
       <!-- Kolom Kontak -->
-      <div class="w-full md:w-1/3 text-left">
-        <h3 class="text-sm font-semibold mb-2 tracking-wider uppercase">Kontak</h3>
+      <div class="lg:w-1/3 w-full">
+        <h3 class="text-sm font-semibold mb-3 tracking-wider uppercase">Kontak Kami</h3>
         <ul class="space-y-2 text-sm text-indigo-200">
           <li>
             <a href="https://wa.me/6281234567890" target="_blank" class="flex items-center hover:text-green-300 transition">
@@ -453,8 +455,8 @@
       </div>
 
       <!-- Kolom Menu -->
-      <div class="w-full md:w-1/3 text-left">
-        <h3 class="text-sm font-semibold mb-2 tracking-wider uppercase">Menu Cepat</h3>
+      <div class="lg:w-1/3 w-full">
+        <h3 class="text-sm font-semibold mb-3 tracking-wider uppercase">Menu Cepat</h3>
         <ul class="space-y-2 text-sm text-indigo-200">
           <li><a href="#" class="hover:text-purple-300 transition">Tentang Program</a></li>
           <li><a href="#" class="hover:text-purple-300 transition">Riwayat Iuran</a></li>
@@ -464,7 +466,7 @@
     </div>
 
     <!-- Garis Pembatas -->
-    <div class="mt-8 border-t border-indigo-700 pt-4 text-center text-xs text-indigo-400">
+    <div class="mt-10 border-t border-indigo-700 pt-4 text-center text-xs text-indigo-400">
       &copy; 2025 Qurban Bosqu. Dibuat dengan semangat 🐄 dan keikhlasan. Semua hak dilindungi.
     </div>
   </div>
