--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                             <td class="px-4 md:px-6 py-4 text-sm text-gray-500">Rp 0</td>
                             <td class="px-4 md:px-6 py-4"><span class="px-3 py-1 text-xs bg-red-100 text-red-800 rounded-full">⏳ Proses-->
         <!-- Footer -->
-<footer class="bg-white border-t mt-12">
+<!--<footer class="bg-white border-t mt-12">
   <div class="container mx-auto px-4 py-6 flex flex-col md:flex-row justify-between items-center text-sm text-gray-600">
     <div class="mb-2 md:mb-0 text-center md:text-left">
       © 2025 <span class="font-semibold text-gray-800">Qurban Bosqu</span>. Semua Hak Dilindungi.
@@ -416,8 +416,8 @@
         <i class="fas fa-mosque"></i> Tentang Program
       </a>
     </div>-->
-  </div>
-</footer>
+  <!--</div>
+</footer>-->
         
         
 <!-- Footer Full Width Sesungguhnya -->
