--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
       </div>
 
       <!-- Kolom Tengah -->
-      <div class="text-center lg:text-left lg:w-1/3">
+      <!--<div class="text-center lg:text-left lg:w-1/3">
         <h3 class="text-base font-semibold mb-2 tracking-wide uppercase">Kontak</h3>
         <ul class="text-indigo-200 space-y-2">
           <li>
@@ -454,7 +454,7 @@
             </a>
           </li>
         </ul>
-      </div>
+      </div>-->
 
       <!-- Kolom Kanan -->
       <div class="text-center lg:text-left lg:w-1/3">
