--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
         <h3 class="text-base font-semibold mb-2 tracking-wide uppercase">Menu Cepat</h3>
         <ul class="text-indigo-200 space-y-2">
           <li><a href="#" class="hover:text-purple-300 transition">Tentang Program</a></li>
-          <li><a href="https://docs.google.com/spreadsheets/d/1jIKY_AfQwMDzuQ7qazez4Gi3MlEVpk1Uh-oOlQGvgV8/edit?usp=sharing" class="hover:text-purple-300 transition">Riwayat Iuran</a></li>
+          <li><a href="https://docs.google.com/spreadsheets/d/1jIKY_AfQwMDzuQ7qazez4Gi3MlEVpk1Uh-oOlQGvgV8/edit?usp=sharing" class="hover:text-purple-300 transition" target=_blank>Riwayat Iuran</a></li>
           <li><a href="#" class="hover:text-purple-300 transition">FAQ & Panduan</a></li>
         </ul>
       </div>
