--- a/index.html
+++ b/index.html
@@ -474,4 +474,5 @@
       &copy; 2025 Qurban Bosqu. Dibuat dengan semangat 🐄 dan keikhlasan. Semua hak dilindungi.
     </div>
   </div>
+    </div>
 </footer>
