--- a/index.html
+++ b/index.html
@@ -149,12 +149,12 @@
                     </div>
                 </div>
                 <div class="text-right">
-                    <span class="text-2xl md:text-3xl font-bold text-green-600">6.5%</span>
+                    <span class="text-2xl md:text-3xl font-bold text-green-600">6.9%</span>
                     <p class="text-xs md:text-sm text-gray-600">Complete</p>
                 </div>
             </div>
             <div class="w-full bg-gray-200 rounded-full h-4 mb-4">
-                <div class="bg-gradient-to-r from-green-400 via-green-500 to-green-600 h-4 rounded-full progress-bar shadow-lg" style="width: 6.5%"></div>
+                <div class="bg-gradient-to-r from-green-400 via-green-500 to-green-600 h-4 rounded-full progress-bar shadow-lg" style="width: 6.9%"></div>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-4 text-sm">
                 <div class="text-center p-3 bg-gray-50 rounded-lg">
@@ -162,11 +162,11 @@
                     <div class="text-gray-600">Target Total</div>
                 </div>
                 <div class="text-center p-3 bg-green-50 rounded-lg">
-                    <div class="text-lg font-bold text-green-600">Rp 3.300.000</div>
+                    <div class="text-lg font-bold text-green-600">Rp 3.500.000</div>
                     <div class="text-gray-600">Terkumpul</div>
                 </div>
                 <div class="text-center p-3 bg-blue-50 rounded-lg">
-                    <div class="text-lg font-bold text-blue-600">Rp 47.100.000</div>
+                    <div class="text-lg font-bold text-blue-600">Rp 46.900.000</div>
                     <div class="text-gray-600">Sisa Target</div>
                 </div>
             </div>
@@ -187,8 +187,8 @@
                         </div>
                     </div>
                     <div class="text-right">
-                        <span class="text-lg font-bold text-green-600">Rp 1.500.000</span>
-                        <p class="text-xs text-gray-500">Juli 2025</p>
+                        <span class="text-lg font-bold text-green-600">Rp 1.700.000</span>
+                        <p class="text-xs text-gray-500">Agustus 2025</p>
                     </div>
                 </div>
                 
@@ -203,7 +203,7 @@
                     </div>
                     <div class="flex justify-between items-center py-2 px-3 bg-green-50 rounded-lg">
                         <span class="text-sm font-medium">3. Zulkarnain</span>
-                        <span class="text-sm text-green-600">✓ Rp 200.000</span>
+                        <span class="text-sm text-green-600">✓ Rp 300.000</span>
                     </div>
                     <div class="flex justify-between items-center py-2 px-3 bg-green-50 rounded-lg">
                         <span class="text-sm font-medium">4. Dedi Alnas</span>
@@ -211,7 +211,7 @@
                     </div>
                     <div class="flex justify-between items-center py-2 px-3 bg-green-50 rounded-lg">
                         <span class="text-sm font-medium">5. Yudistira</span>
-                        <span class="text-sm text-gray-500">⏳ Proses</span>
+                        <span class="text-sm text-green-600">✓ Rp 100.000</span>
                     </div>
                     <div class="flex justify-between items-center py-2 px-3 bg-green-50 rounded-lg">
                         <span class="text-sm font-medium">6. Riza S</span>
@@ -226,7 +226,7 @@
                 <div class="border-t pt-3">
                     <div class="flex justify-between items-center">
                         <span class="font-semibold text-gray-700">Total Sapi 1:</span>
-                        <span class="font-bold text-green-600">Rp 1.500.000</span>
+                        <span class="font-bold text-green-600">Rp 1.700.000</span>
                     </div>
                 </div>
             </div>
@@ -245,7 +245,7 @@
                     </div>
                     <div class="text-right">
                         <span class="text-lg font-bold text-orange-600">Rp 1.800.000</span>
-                        <p class="text-xs text-gray-500">Juli 2025</p>
+                        <p class="text-xs text-gray-500">Agustus 2025</p>
                     </div>
                 </div>
                 
