--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
 
     <!-- Copyright -->
     <div class="mt-10 border-t border-indigo-500/30 pt-4 text-center text-xs text-indigo-200">
-      &copy; 🐄 2025 Qurban Bosqu. Dibuat dengan semangat dan keikhlasan. Semua hak dilindungi.
+      &copy;  2025 Qurban Bosqu. 🐄 Dibuat dengan semangat dan keikhlasan. Semua hak dilindungi.
     </div>
   </div>
     </div>
