--- a/index.html
+++ b/index.html
@@ -149,12 +149,12 @@
                     </div>
                 </div>
                 <div class="text-right">
-                    <span class="text-2xl md:text-3xl font-bold text-green-600">8.93%</span>
+                    <span class="text-2xl md:text-3xl font-bold text-green-600">10.91%</span>
                     <p class="text-xs md:text-sm text-gray-600">Complete</p>
                 </div>
             </div>
             <div class="w-full bg-gray-200 rounded-full h-4 mb-4">
-                <div class="bg-gradient-to-r from-green-400 via-green-500 to-green-600 h-4 rounded-full progress-bar shadow-lg" style="width: 8.93%"></div>
+                <div class="bg-gradient-to-r from-green-400 via-green-500 to-green-600 h-4 rounded-full progress-bar shadow-lg" style="width: 10.91%"></div>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-4 text-sm">
                 <div class="text-center p-3 bg-gray-50 rounded-lg">
@@ -187,15 +187,15 @@
                         </div>
                     </div>
                     <div class="text-right">
-                        <span class="text-lg font-bold text-green-600">Rp 2.200.000</span>
-                        <p class="text-xs text-gray-500">Agustus 2025</p>
+                        <span class="text-lg font-bold text-green-600">Rp 2.700.000</span>
+                        <p class="text-xs text-gray-500">September 2025</p>
                     </div>
                 </div>
                 
                 <div class="space-y-2 mb-4">
                     <div class="flex justify-between items-center py-2 px-3 bg-green-50 rounded-lg">
                         <span class="text-sm font-medium">1. Adira</span>
-                        <span class="text-sm text-green-600">✓ Rp 300.000</span>
+                        <span class="text-sm text-green-600">✓ Rp 400.000</span>
                     </div>
                     <div class="flex justify-between items-center py-2 px-3 bg-green-50 rounded-lg">
                         <span class="text-sm font-medium">2. Ridho</span>
@@ -203,11 +203,11 @@
                     </div>
                     <div class="flex justify-between items-center py-2 px-3 bg-green-50 rounded-lg">
                         <span class="text-sm font-medium">3. Zulkarnain</span>
-                        <span class="text-sm text-green-600">✓ Rp 300.000</span>
+                        <span class="text-sm text-green-600">✓ Rp 400.000</span>
                     </div>
                     <div class="flex justify-between items-center py-2 px-3 bg-green-50 rounded-lg">
                         <span class="text-sm font-medium">4. Dedi Alnas</span>
-                        <span class="text-sm text-green-600">✓ Rp 300.000</span>
+                        <span class="text-sm text-green-600">✓ Rp 400.000</span>
                     </div>
                     <div class="flex justify-between items-center py-2 px-3 bg-green-50 rounded-lg">
                         <span class="text-sm font-medium">5. Yudistira</span>
@@ -215,7 +215,7 @@
                     </div>
                     <div class="flex justify-between items-center py-2 px-3 bg-green-50 rounded-lg">
                         <span class="text-sm font-medium">6. Riza S</span>
-                        <span class="text-sm text-green-600">✓ Rp 200.000</span>
+                        <span class="text-sm text-green-600">✓ Rp 400.000</span>
                     </div>
                     <div class="flex justify-between items-center py-2 px-3 bg-green-50 rounded-lg">
                         <span class="text-sm font-medium">7. Imam S</span>
@@ -226,7 +226,7 @@
                 <div class="border-t pt-3">
                     <div class="flex justify-between items-center">
                         <span class="font-semibold text-gray-700">Total Sapi 1:</span>
-                        <span class="font-bold text-green-600">Rp 2.200.000</span>
+                        <span class="font-bold text-green-600">Rp 2.700.000</span>
                     </div>
                 </div>
             </div>
@@ -244,8 +244,8 @@
                         </div>
                     </div>
                     <div class="text-right">
-                        <span class="text-lg font-bold text-orange-600">Rp 2.300.000</span>
-                        <p class="text-xs text-gray-500">Agustus 2025</p>
+                        <span class="text-lg font-bold text-orange-600">Rp 2.800.000</span>
+                        <p class="text-xs text-gray-500">September 2025</p>
                     </div>
                 </div>
                 
@@ -256,11 +256,11 @@
                     </div>
                     <div class="flex justify-between items-center py-2 px-3 bg-orange-50 rounded-lg">
                         <span class="text-sm font-medium">9. Syari Novianti</span>
-                        <span class="text-sm text-orange-600">✓ Rp 300.000</span>
+                        <span class="text-sm text-orange-600">✓ Rp 400.000</span>
                     </div>
                     <div class="flex justify-between items-center py-2 px-3 bg-orange-50 rounded-lg">
                         <span class="text-sm font-medium">10. Alfan</span>
-                        <span class="text-sm text-orange-600">✓ Rp 300.000</span>
+                        <span class="text-sm text-orange-600">✓ Rp 400.000</span>
                     </div>
                     <div class="flex justify-between items-center py-2 px-3 bg-orange-50 rounded-lg">
                         <span class="text-sm font-medium">11. Martin</span>
@@ -268,7 +268,7 @@
                     </div>
                     <div class="flex justify-between items-center py-2 px-3 bg-orange-50 rounded-lg">
                         <span class="text-sm font-medium">12. Rachmad</span>
-                        <span class="text-sm text-orange-600">✓ Rp 500.000</span>
+                        <span class="text-sm text-orange-600">✓ Rp 800.000</span>
                     </div>
                     <div class="flex justify-between items-center py-2 px-3 bg-orange-50 rounded-lg">
                         <span class="text-sm font-medium">13. Sugi</span>
@@ -283,7 +283,7 @@
                 <div class="border-t pt-3">
                     <div class="flex justify-between items-center">
                         <span class="font-semibold text-gray-700">Total Sapi 2:</span>
-                        <span class="font-bold text-orange-600">Rp 2.300.000</span>
+                        <span class="font-bold text-orange-600">Rp 2.800.000</span>
                     </div>
                 </div>
             </div>
